--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^13.0.3
   cloud_functions: ^6.0.3
   firebase_messaging: ^16.0.3
+  flutter_local_notifications: ^17.2.3
   fluttertoast: ^9.0.0
   image_picker: ^1.2.0
   cached_network_image: ^3.4.1
